<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/ScrollView"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">

		<Button android:id="@+id/sayHelloBtn" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/label_sayHello" />
		<Button android:id="@+id/layoutBtn" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/label_layout" />
		<Button android:id="@+id/widgetBtn" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/label_widget" />
		<Button android:id="@+id/intentBtn" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/label_intent" />
		<Button android:id="@+id/handlerBtn" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/label_handler" />
		<Button android:id="@+id/sqliteBtn" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/label_sqlite" />
		<Button android:id="@+id/providerBtn" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/label_provider" />
	</LinearLayout>

</ScrollView>
