<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<Button android:id="@+id/createBtn" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/label_sqlite_create" />
		<Button android:id="@+id/upgradeBtn" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/label_sqlite_upgrade" />
		<Button android:id="@+id/addBtn" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/label_sqlite_add" />
		<Button android:id="@+id/deleteBtn" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/label_sqlite_delete" />
		<Button android:id="@+id/modifyBtn" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/label_sqlite_modify" />
		<Button android:id="@+id/queryBtn" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/label_sqlite_query" />
		<Button android:id="@+id/backBtn" android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true" android:text="@string/back" />

	</LinearLayout>
</ScrollView>
