<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<Button android:id="@+id/providerAddBtn" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/label_provider_add" />
		<Button android:id="@+id/providerDeleteBtn"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/label_provider_delete" />
		<Button android:id="@+id/providerModifyBtn"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/label_provider_modify" />
		<Button android:id="@+id/providerQueryBtn"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/label_provider_query" />
		<Button android:id="@+id/providerGetTypeBtn"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/label_provider_gettype" />
		<Button android:id="@+id/backBtn" android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true" android:text="@string/back" />

	</LinearLayout>
</ScrollView>
