<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<Button android:id="@+id/backBtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:text="@string/back" />

	<Button android:id="@+id/startBtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dip"
			android:text="@string/label_handler_start" />

	<Button android:id="@+id/endBtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/startBtn"
			android:layout_marginTop="10dip"
			android:text="@string/label_handler_end" />
</RelativeLayout>
